--- a/apps/frontend/src/index.html
+++ b/apps/frontend/src/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
   <head>
     <meta charset="utf-8" />
+    <meta name="google" content="notranslate" />
     <title>frontend</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
